--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <header>
-        <a href="index.html" class="logo"><img src="../pics/maylogo.png" alt="">MAY FOUNDATION</a>
+        <a href="index.html" class="logo"><img src="../maylogo.png" alt="">MAY FOUNDATION</a>
 
         <ul class="navlist">
             <a href="index.html">Home</a>
